2013-04-25 Miguel de Dios <miguel.dedios@artica.es>

	* extensions/update_manager/update_pandora.php: cleaned source code
	style.
	
	* include/functions_events.php,
	operation/events/events.build_table.php: show columns by group in
	metaconsole.
	
	Fixes: #3609374

2013-04-29  Sergio Martin <sergio.martin@artica.es>

	* images/mod_async_proc.png
	images/mod_string.png
	images/mod_snmp_proc.png
	images/mod_data.png
	images/mod_tcp_inc.png
	images/mod_web_data.png
	images/mod_icmp_data.png
	images/mod_async_string.png
	images/mod_image_png.png
	images/mod_proc.png
	images/mod_snmp_string.png
	images/mod_tcp_data.png
	images/mod_web_proc.png
	images/mod_icmp_proc.png
	images/mod_image_jpg.png
	images/mod_log4x.png
	images/mod_async_inc.png
	images/mod_async_data.png
	images/mod_data_inc.png
	images/mod_keepalive.png
	images/mod_snmp_inc.png
	images/mod_snmp_data.png
	images/mod_tcp_string.png
	images/mod_tcp_proc.png: Change module types icons
	to new style

2013-04-29  Sergio Martin <sergio.martin@artica.es>

	* images/gis_map/icons/star.default.png
	images/gis_map/icons/cross.warning.png
	images/gis_map/icons/star.bad.png
	images/gis_map/icons/cross.ok.png
	images/gis_map/icons/marker.default.png
	images/gis_map/icons/square_marker.warning.png
	images/gis_map/icons/circle.warning.png
	images/gis_map/icons/marker.bad.png
	images/gis_map/icons/square_marker.ok.png
	images/gis_map/icons/circle.ok.png
	images/gis_map/icons/triangle.warning.png
	images/gis_map/icons/cross.default.png
	images/gis_map/icons/star.warning.png
	images/gis_map/icons/triangle.ok.png
	images/gis_map/icons/cross.bad.png
	images/gis_map/icons/star.ok.png
	images/gis_map/icons/square_marker.default.png
	images/gis_map/icons/circle.default.png
	images/gis_map/icons/marker.warning.png
	images/gis_map/icons/square_marker.bad.png
	images/gis_map/icons/circle.bad.png
	images/gis_map/icons/triangle.default.png
	images/gis_map/icons/marker.ok.png
	images/gis_map/icons/triangle.bad.png: Change gis icons