@@ -2123,7 +2123,11 @@ function ui_print_page_header ($title, $icon = "", $return = false, $help = "", 
 	if (is_array($options)) {
 		$buffer .= '<div id="menu_tab"><ul class="mn">';
 		foreach ($options as $key => $option) {
-			if ($key === 'separator') {
+			if(empty($option)) {
+				continue;
+			}
+			else if ($key === 'separator') {
+				continue;
 				//$buffer .= '<li class='.$separator_class.'>';
 				//$buffer .= '</li>';
 			}
