@@ -1,3 +1,9 @@
+2013-04-29  Sergio Martin <sergio.martin@artica.es>
+
+	* include/styles/pandora.css
+	include/functions_ui.php: Fixed various styles of
+	header icons and tabs
+
 2013-04-25 Miguel de Dios <miguel.dedios@artica.es>
 
 	* extensions/update_manager/update_pandora.php: cleaned source code
